# business-rules

./: .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: tests.yaml
business_rules/: __init__.py  actions.py  engine.py  fields.py  models.py  operators.py  utils.py  variables.py
business_rules/service/: log_service.py
business_rules/util/: compat.py  method_type.py
tests/: __init__.py  actions.py  test_actions_class.py  test_engine_logic.py  test_integration.py  test_operators.py  test_utils.py  test_variables.py  test_variables_class.py  variables.py
tests/example/: actions.py  basket.py  main.py  variables.py
tests/loyalty/: actions.py  basket.py  main.py  validators.py  variables.py
tests/operators/: test_operators.py  test_operators_class.py  test_time_operator.py
