[tool.poetry]
name = "business-rules"
version = "1.7.0"
description = "Python DSL for setting up business intelligence rules that can be configured without code [https://github.com/venmo/business-rules]"
authors = ["venmo <open-source@venmo.com>"]
readme = "README.md"
packages = [{include = "business_rules"}]
license='MIT'

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
mock = "^5.2.0"
nose = "^1.3.7"
nose-run-line-number = "^0.0.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
coverage = "^7.2.3"
tox = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
